Checkpoint…
Have not completed upgrade to maven model 4.1.0 here. Working to begin adding capabilities to add administrative menus.